--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Planificador de Actores - Teatro</title>
+    <title>Gestor de Teatro</title>
     <style>
         body {
             box-sizing: border-box;
@@ -92,6 +92,7 @@
             cursor: grab;
             transition: all 0.3s ease;
             border: 2px solid transparent;
+            position: relative;
         }
 
         .actor-card:hover {
@@ -271,132 +272,183 @@
                 grid-template-columns: 1fr;
             }
         }
+
+        .delete-btn {
+            position: absolute;
+            right: 10px;
+            top: 50%;
+            transform: translateY(-50%);
+            background: rgba(229, 62, 62, 0.1);
+            color: #e53e3e;
+            border: none;
+            width: 24px;
+            height: 24px;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+            font-size: 18px;
+            transition: all 0.2s ease;
+        }
+
+        .delete-btn:hover {
+            background: rgba(229, 62, 62, 0.2);
+        }
+
+        .play-title-row {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 8px;
+        }
+
+        /* Nuevos estilos para la navegación */
+        .nav-tabs {
+            display: flex;
+            gap: 10px;
+            margin-bottom: 30px;
+            justify-content: center;
+        }
+
+        .nav-tab {
+            padding: 12px 24px;
+            background: rgba(255, 255, 255, 0.2);
+            color: white;
+            border: none;
+            border-radius: 8px;
+            cursor: pointer;
+            font-size: 1rem;
+            transition: all 0.3s ease;
+        }
+
+        .nav-tab:hover {
+            background: rgba(255, 255, 255, 0.3);
+        }
+
+        .nav-tab.active {
+            background: white;
+            color: #764ba2;
+            font-weight: 600;
+        }
+
+        /* Estilos para las secciones */
+        .section {
+            display: none;
+        }
+
+        .section.active {
+            display: block;
+        }
+
+        /* Estilos para la vista de resumen de actores */
+        .actors-summary {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+            gap: 20px;
+            padding: 20px;
+        }
+
+        .actor-summary-card {
+            background: white;
+            border-radius: 16px;
+            padding: 20px;
+            box-shadow: 0 10px 30px rgba(0,0,0,0.1);
+        }
+
+        .actor-stats {
+            margin-top: 15px;
+            padding-top: 15px;
+            border-top: 1px solid #e2e8f0;
+        }
+
+        .stat-item {
+            display: flex;
+            justify-content: space-between;
+            margin-bottom: 8px;
+            color: #4a5568;
+        }
+
+        .stat-value {
+            font-weight: 600;
+            color: #2d3748;
+        }
+
+        .actor-plays-list {
+            margin-top: 15px;
+            font-size: 0.9rem;
+        }
+
+        .actor-plays-list h4 {
+            color: #4a5568;
+            margin-bottom: 8px;
+        }
+
+        .play-tag {
+            display: inline-block;
+            padding: 4px 12px;
+            background: #edf2f7;
+            border-radius: 20px;
+            margin: 2px;
+            font-size: 0.85rem;
+            color: #4a5568;
+        }
+
+        .play-tag.duo {
+            background: #c6f6d5;
+            color: #276749;
+        }
+
+        .play-tag.trio {
+            background: #feebc8;
+            color: #9c4221;
+        }
+
     </style>
 </head>
 <body>
     <div class="container">
         <div class="header">
-            <h1>Planificador de Actores</h1>
-            <p>Arrastra y suelta actores en las obras de teatro</p>
+            <h1>Gestor de Teatro</h1>
+            <p>Sistema de gestión de actores y obras</p>
         </div>
 
-        <div class="dashboard">
-            <div class="actors-panel">
-                <h2 class="panel-title">Actores Disponibles</h2>
-                <div class="actors-list" id="actorsList">
-                    <div class="actor-card" draggable="true" data-actor-id="1">
-                        <div class="actor-avatar">AM</div>
-                        <div class="actor-info">
-                            <div class="actor-name">Ana Martínez</div>
-                            <div class="actor-role">Protagonista</div>
-                        </div>
+        <div class="nav-tabs">
+            <button class="nav-tab active" data-section="assignments">Asignaciones</button>
+            <button class="nav-tab" data-section="summary">Resumen</button>
+        </div>
+
+        <div id="assignments" class="section active">
+            <div class="dashboard">
+                <div class="actors-panel">
+                    <h2 class="panel-title">Actores Disponibles</h2>
+                    <div class="actors-list" id="actorsList">
+                        <!-- Los actores se cargarán dinámicamente -->
                     </div>
-                    <div class="actor-card" draggable="true" data-actor-id="2">
-                        <div class="actor-avatar">CG</div>
-                        <div class="actor-info">
-                            <div class="actor-name">Carlos García</div>
-                            <div class="actor-role">Secundario</div>
-                        </div>
+                    <div class="stats">
+                        <span>Total: <span id="totalActors">0</span></span>
+                        <span>Asignados: <span id="assignedCount">0</span></span>
                     </div>
-                    <div class="actor-card" draggable="true" data-actor-id="3">
-                        <div class="actor-avatar">LR</div>
-                        <div class="actor-info">
-                            <div class="actor-name">Laura Rodríguez</div>
-                            <div class="actor-role">Protagonista</div>
-                        </div>
-                    </div>
-                    <div class="actor-card" draggable="true" data-actor-id="4">
-                        <div class="actor-avatar">MF</div>
-                        <div class="actor-info">
-                            <div class="actor-name">Miguel Fernández</div>
-                            <div class="actor-role">Reparto</div>
-                        </div>
-                    </div>
-                    <div class="actor-card" draggable="true" data-actor-id="5">
-                        <div class="actor-avatar">SP</div>
-                        <div class="actor-info">
-                            <div class="actor-name">Sofía Pérez</div>
-                            <div class="actor-role">Secundario</div>
-                        </div>
-                    </div>
-                    <div class="actor-card" draggable="true" data-actor-id="6">
-                        <div class="actor-avatar">JL</div>
-                        <div class="actor-info">
-                            <div class="actor-name">Javier López</div>
-                            <div class="actor-role">Reparto</div>
-                        </div>
+                    <div style="margin-top:20px; text-align:center;">
+                        <button onclick="addActor()" style="padding:8px 16px; background:#667eea; color:white; border:none; border-radius:8px; cursor:pointer; margin-right:10px;">Agregar Actor</button>
+                        <button onclick="addPlay()" style="padding:8px 16px; background:#764ba2; color:white; border:none; border-radius:8px; cursor:pointer;">Agregar Obra</button>
                     </div>
                 </div>
-                <div class="stats">
-                    <span>Total: <span id="totalActors">6</span></span>
-                    <span>Asignados: <span id="assignedCount">0</span></span>
-                </div>
-                <div style="margin-top:20px; text-align:center;">
-                    <button onclick="addActor()" style="padding:8px 16px; background:#667eea; color:white; border:none; border-radius:8px; cursor:pointer; margin-right:10px;">Agregar Actor</button>
-                    <button onclick="addPlay()" style="padding:8px 16px; background:#764ba2; color:white; border:none; border-radius:8px; cursor:pointer;">Agregar Obra</button>
+
+                <div class="plays-grid" id="playsGrid">
+                    <!-- Las obras se cargarán dinámicamente -->
                 </div>
             </div>
+        </div>
 
-            <div class="plays-grid" id="playsGrid">
-                <div class="play-card">
-                    <div class="play-header">
-                        <h3 class="play-title">Romeo y Julieta</h3>
-                        <div class="play-info">
-                            <span>Acto I, Escena 1</span>
-                            <span class="capacity-badge" data-current="0" data-max="3">0/3 actores</span>
-                        </div>
-                    </div>
-                    <div class="drop-zone" data-play-id="romeo" data-max-actors="3">
-                        <div class="assigned-actors" id="romeo-actors"></div>
-                        <div class="empty-state">Arrastra actores aquí</div>
-                    </div>
-                </div>
-
-                <div class="play-card">
-                    <div class="play-header">
-                        <h3 class="play-title">Hamlet</h3>
-                        <div class="play-info">
-                            <span>Acto II, Escena 2</span>
-                            <span class="capacity-badge" data-current="0" data-max="4">0/4 actores</span>
-                        </div>
-                    </div>
-                    <div class="drop-zone" data-play-id="hamlet" data-max-actors="4">
-                        <div class="assigned-actors" id="hamlet-actors"></div>
-                        <div class="empty-state">Arrastra actores aquí</div>
-                    </div>
-                </div>
-
-                <div class="play-card">
-                    <div class="play-header">
-                        <h3 class="play-title">La Casa de Bernarda Alba</h3>
-                        <div class="play-info">
-                            <span>Acto I, Escena 3</span>
-                            <span class="capacity-badge" data-current="0" data-max="2">0/2 actores</span>
-                        </div>
-                    </div>
-                    <div class="drop-zone" data-play-id="bernarda" data-max-actors="2">
-                        <div class="assigned-actors" id="bernarda-actors"></div>
-                        <div class="empty-state">Arrastra actores aquí</div>
-                    </div>
-                </div>
-
-                <div class="play-card">
-                    <div class="play-header">
-                        <h3 class="play-title">Don Juan Tenorio</h3>
-                        <div class="play-info">
-                            <span>Acto III, Escena 1</span>
-                            <span class="capacity-badge" data-current="0" data-max="5">0/5 actores</span>
-                        </div>
-                    </div>
-                    <div class="drop-zone" data-play-id="donjuan" data-max-actors="5">
-                        <div class="assigned-actors" id="donjuan-actors"></div>
-                        <div class="empty-state">Arrastra actores aquí</div>
-                    </div>
-                </div>
+        <div id="summary" class="section">
+            <div class="actors-summary" id="actorsSummary">
+                <!-- El resumen de actores se cargará dinámicamente -->
             </div>
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
 </body>
 </html>
+``` 
