--- a/index.html
+++ b/index.html
@@ -448,7 +448,8 @@
         </div>
     </div>
 
-    <script type="module" src="script.js"></script>
+        <script src="data.js"></script>
+    <script src="script_fixed.js"></script>
 </body>
 </html>
 ``` 
