--- a/index.html
+++ b/index.html
@@ -4,15 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gestor de Teatro</title>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <style>
         body {
             box-sizing: border-box;
             margin: 0;
             padding: 0;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            font-family: 'Poppins', sans-serif;
+            background: linear-gradient(135deg, #1a1c2c 0%, #4a2c40 100%);
             min-height: 100vh;
             color: #333;
+            position: relative;
+            overflow-x: hidden;
+        }
+
+        body::before {
+            content: '';
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: url('https://www.transparenttextures.com/patterns/theater-seats.png');
+            opacity: 0.05;
+            pointer-events: none;
+            z-index: 1;
         }
 
         .container {
@@ -28,9 +45,33 @@
         }
 
         .header h1 {
-            font-size: 2.5rem;
+            font-family: 'Playfair Display', serif;
+            font-size: 3.5rem;
             margin: 0;
             text-shadow: 0 2px 4px rgba(0,0,0,0.3);
+            background: linear-gradient(120deg, #ffd700, #fff9c4);
+            -webkit-background-clip: text;
+            background-clip: text;
+            -webkit-text-fill-color: transparent;
+            position: relative;
+        }
+
+        .header h1::before,
+        .header h1::after {
+            content: '🎭';
+            position: absolute;
+            font-size: 2rem;
+            top: 50%;
+            transform: translateY(-50%);
+            opacity: 0.8;
+        }
+
+        .header h1::before {
+            left: -50px;
+        }
+
+        .header h1::after {
+            right: -50px;
         }
 
         .header p {
@@ -430,9 +471,49 @@
                         <span>Asignados: <span id="assignedCount">0</span></span>
                     </div>
                     <div style="margin-top:20px; text-align:center;">
-                        <button onclick="addActor()" style="padding:8px 16px; background:#667eea; color:white; border:none; border-radius:8px; cursor:pointer; margin-right:10px;">Agregar Actor</button>
-                        <button onclick="addPlay()" style="padding:8px 16px; background:#764ba2; color:white; border:none; border-radius:8px; cursor:pointer;">Agregar Obra</button>
+                        <button onclick="addActor()" class="action-button" style="background: linear-gradient(45deg, #ffd700, #ffa000);">✨ Agregar Actor</button>
+                        <button onclick="addPlay()" class="action-button" style="background: linear-gradient(45deg, #ff4081, #c51162);">🎬 Agregar Obra</button>
+                        <button onclick="saveChanges()" class="action-button save-button" style="background: linear-gradient(45deg, #00c853, #009624); margin-top: 10px; width: 100%;">💾 Guardar Cambios</button>
                     </div>
+                    <style>
+                        .action-button {
+                            padding: 12px 24px;
+                            color: white;
+                            border: none;
+                            border-radius: 12px;
+                            cursor: pointer;
+                            font-weight: 600;
+                            margin-right: 10px;
+                            transition: all 0.3s ease;
+                            box-shadow: 0 4px 15px rgba(0,0,0,0.2);
+                            text-shadow: 0 1px 2px rgba(0,0,0,0.2);
+                        }
+
+                        .action-button:hover {
+                            transform: translateY(-2px);
+                            box-shadow: 0 6px 20px rgba(0,0,0,0.3);
+                        }
+
+                        .action-button:active {
+                            transform: translateY(1px);
+                        }
+
+                        .save-button {
+                            animation: pulse 2s infinite;
+                        }
+
+                        @keyframes pulse {
+                            0% {
+                                box-shadow: 0 0 0 0 rgba(0,200,83,0.4);
+                            }
+                            70% {
+                                box-shadow: 0 0 0 10px rgba(0,200,83,0);
+                            }
+                            100% {
+                                box-shadow: 0 0 0 0 rgba(0,200,83,0);
+                            }
+                        }
+                    </style>
                 </div>
 
                 <div class="plays-grid" id="playsGrid">
